--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
+  "peacock.color": "#000000",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#b8d457",
-    "activityBar.background": "#b8d457",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#2d94b2",
+    "activityBar.activeBackground": "#1a1a1a",
+    "activityBar.background": "#1a1a1a",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#606020",
     "activityBarBadge.foreground": "#e7e7e7",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#b8d457",
-    "statusBar.background": "#a4c533",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#829c29",
-    "statusBarItem.remoteBackground": "#a4c533",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#a4c533",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#a4c53399",
-    "titleBar.inactiveForeground": "#15202b99"
-  },
-  "peacock.color": "#a4c533"
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#1a1a1a",
+    "statusBar.background": "#000000",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#1a1a1a",
+    "statusBarItem.remoteBackground": "#000000",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#000000",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#00000099",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  }
 }
